service.yml
apiVersion: v1
kind: Service
metadata:
  name: udagram
  labels:
    service: udagram
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    nodePort: 30003
  selector:
    app: udagram-frontend
  type: LoadBalancer
