ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: udagram-ingress
spec:
  rules:
  - host: my-udagram.com
    http:
      paths:
       - backend:
            serviceName: udagram
            servicePort: 9000
